<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.mundos_virtuales.sanbotmv.MainActivity" >
    <item
        android:id="@+id/action_video_test"
        android:orderInCategory="100"
        android:title="@string/video_test" />
    <item android:id="@+id/action_loop"
    android:orderInCategory="101"
    app:showAsAction="never"
    android:title="@string/toggle_loop"/>
<item android:id="@+id/action_sanbot"
    android:orderInCategory="101"
    app:showAsAction="never"
    android:title="@string/about_sanbot"/>
<item android:id="@+id/action_mv"
    android:orderInCategory="101"
    app:showAsAction="never"
    android:title="@string/about_mundos_virtuales"
    >
</item>
</menu>