<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.mundos_virtuales.sanbotmv.MainActivity">

    <Button
        android:id="@+id/btnNumAttention"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ButtonPrincipal"
        android:text="@string/rcStrNumAttention" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ButtonPrincipal"
        android:text="@string/rcStrMap" />

    <Button
        android:id="@+id/btnEvalAttention"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ButtonPrincipal"
        android:text="@string/rcStrEvalAttention" />

</LinearLayout>
