<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.mundos_virtuales.sanbotmv.OptionsActivity">

    <TextView
        android:id="@+id/tvCaptionGetNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Generé su número atención"
        android:textSize="48sp"
        />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="400px"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="----"
        android:textSize="148sp" />

    <TextView
        android:id="@+id/tvFooterGetNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/btnGetNumber"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/rcStrGetNumber"
        android:textSize="18sp"
        android:theme="@style/ButtonPrincipal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGetNumberMap"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:theme="@style/ButtonPrincipal"
            android:text="@string/rcStrGetNumberMap" />

        <Button
            android:id="@+id/btnGetNumberReturn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:theme="@style/ButtonPrincipal"
            android:text="@string/rcStrOptionReturn" />

        <Button
            android:id="@+id/btnGetNumberCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:theme="@style/ButtonPrincipal"
            android:text="@string/rcStrCancel" />

    </LinearLayout>

</LinearLayout>

