<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.mundos_virtuales.sanbotmv.EnterUserActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvRut"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/rcStrRut"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etRut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="LabelFor"
            android:digits="0123456789 -."
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnOkRut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:theme="@style/ButtonPrincipal"
            android:text="@string/rcStrBtnOkRut"/>

        <Button
            android:id="@+id/btnOkRutCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:theme="@style/ButtonPrincipal"
            android:text="@string/rcStrCancel"/>
    </LinearLayout>

</LinearLayout>
